<?xml version="1.0"?>
<package format="2">
  
    <name>bender_ltm</name>
    <version>1.0.0</version>

    <description>LTM packages for the Bender robot.</description>
    <maintainer email="bender.devel@gmail.com">UChile Homebreakers</maintainer>
    <author email="matias.pavez.b@gmail.com">Matías Pavez - UChile Homebreakers</author>
    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <export>
      <metapackage/>
    </export>

</package>