<?xml version="1.0"?>
<package format="2">

    <!-- PACKAGE INFORMATION -->
    <!-- - - - - - - - - - - -->
    <name>bender_ltm_demos</name>
    <version>1.0.0</version>
    
    <description>LTM demos using SMACH machines and custom plugins for Bender.</description>

    <maintainer email="bender.devel@gmail.com">UChile Homebreakers</maintainer>
    <author email="matias.pavez.b@gmail.com">Matías Pavez - UChile Homebreakers</author>

    <!-- about bender and related repository -->
    <url type="website">http://robotica-uchile.amtc.cl/</url>
    <url type="bugtracker">https://github.com/uchile-robotics/bender_ltm/issues</url>
    <url type="repository">https://github.com/uchile-robotics/bender_ltm</url>

    <license>GPLv3</license>


    <!-- DEPENDENCIES -->
    <!-- - - - - - - - - - - -->

    <!--  build system tool to build this package -->
    <buildtool_depend>catkin</buildtool_depend>


    <!-- build, export, and execution dependencies -->
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>std_srvs</depend>
    <depend>smach</depend>
    <depend>smach_ros</depend>
    <depend>bender_ltm_plugins</depend>
    
    <depend>uchile_msgs</depend>
    <depend>uchile_srvs</depend>    
  
    <export>
    </export>
  
</package>