<?xml version="1.0"?>
<package format="2">

    <!-- PACKAGE INFORMATION -->
    <!-- - - - - - - - - - - -->
    <name>bender_ltm_plugins</name>
    <version>0.0.0</version>
    <description>
        (Sample code and scripts) Long Term Memory for robots using ROS. Thesis project. 
    </description>
    <author email="matias.pavez@ing.uchile.cl">Matías Pavez</author>
    <maintainer email="matias.pavez@ing.uchile.cl">Matías Pavez</maintainer>

    <license>GPL-3.0</license>
    <!-- <url type="repository">https://github.com/mpavezb/bender_ltm_plugins</url> -->


    <!-- SYSTEM DEPENDENCIES -->
    <!-- - - - - - - - - - - -->

    <!--  build system tool to build this package -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- build, export, and execution dependencies -->
    <depend>rospy</depend>
    <depend>roscpp</depend>
    <depend>std_srvs</depend>
    <depend>uchile_msgs</depend>
    <depend>uchile_srvs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>smach</depend>
    <depend>smach_ros</depend>
    <depend>cv_bridge</depend>
    <depend>pluginlib</depend>
    <depend>ltm</depend>
    <depend>ltm_addons</depend>

    <!-- build dependencies -->
    <build_depend>message_generation</build_depend>

    <!-- export dependencies -->
    <!-- -->

    <!-- excution dependencies -->
    <exec_depend>message_runtime</exec_depend>

    <!-- test dependencies -->
    <!--  -->

    <!-- documentation dependencies -->
    <!-- -->

    <export>
        <!-- ltm related plugins -->
        <ltm plugin="${prefix}/ltm_plugins.xml"/>
    </export>

</package>
