<?xml version="1.0"?>
<package format="2">

    <!-- PACKAGE INFORMATION -->
    <!-- - - - - - - - - - - -->
    <name>bender_ltm_plugins</name>
    <version>1.0.0</version>
    
    <description>LTM plugins for the Bender robot.</description>

    <maintainer email="bender.devel@gmail.com">UChile Homebreakers</maintainer>
    <author email="matias.pavez.b@gmail.com">Matías Pavez - UChile Homebreakers</author>

    <!-- about bender and related repository -->
    <url type="website">http://robotica-uchile.amtc.cl/</url>
    <url type="bugtracker">https://github.com/uchile-robotics/bender_ltm/issues</url>
    <url type="repository">https://github.com/uchile-robotics/bender_ltm</url>

    <license>GPLv3</license>


    <!-- DEPENDENCIES -->
    <!-- - - - - - - - - - - -->

    <!--  build system tool to build this package -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- build, export, and execution dependencies -->
    <depend>rospy</depend>
    <depend>roscpp</depend>
    <depend>std_srvs</depend>
    <depend>uchile_msgs</depend>
    <depend>uchile_srvs</depend>
    <depend>std_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>smach</depend>
    <depend>smach_ros</depend>
    <depend>cv_bridge</depend>
    <depend>pluginlib</depend>
    <depend>ltm</depend>
    <depend>ltm_addons</depend>

    <!-- build dependencies -->
    <build_depend>message_generation</build_depend>

    <!-- export dependencies -->
    <!-- -->

    <!-- excution dependencies -->
    <exec_depend>message_runtime</exec_depend>

    <!-- test dependencies -->
    <!--  -->

    <!-- documentation dependencies -->
    <!-- -->

    <export>
        <!-- ltm related plugins -->
        <ltm plugin="${prefix}/ltm_plugins.xml"/>
    </export>

</package>
